0511 renew news topbar

--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-
-    <!-- 精簡code +a +svg+btn-->
-    <!-- topbar -->
-    <header id="topbar">
+    <!-- 精簡code+a+svg+btn-->
+    <!-- 1.2topbar green-->
+    <div id="topbar">
         <nav>
             <ul class="menu">
                 <li><a href="about.html">關於蘵感</a></li>
@@ -30,21 +29,12 @@
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <!-- 0.原本的底色 -->
-                    <!-- <div class="signup"></div> -->
-                    <!-- 改用btn -->
-                    <div >
+                    <div>
                         <div class="m_btn">
                             <a href="signup.html">快速報名</a>
                             <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                         </div>
                     </div>
-                    <!-- 0.原本 -->
-                    <!-- <div class="word">
-                        <a href="signup.html">快速報名</a>
-                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
-                    </div> -->
-
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
@@ -52,12 +42,12 @@
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <!-- 2.news  -->
     <!-- 最新消息 -->
