--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -198,7 +198,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
