0511 renew media css

--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -66,23 +66,13 @@
             <div class="title">
                 <h3>MEDIA</h3>
                 <h1>蘵感文章</h1>
-                <!-- 按鈕 -->
+                <!-- 按鈕 a -->
                 <ul>
-                    <button><a href="">
-                            <h2>全部文章</h2>
-                        </a></button>
-                    <button><a href="">
-                            <h2>美學分享</h2>
-                        </a></button>
-                    <button><a href="">
-                            <h2>活動花絮</h2>
-                        </a></button>
-                    <button><a href="">
-                            <h2>好評分享</h2>
-                        </a></button>
-                    <button><a href="">
-                            <h2>採訪報導</h2>
-                        </a></button>
+                    <li><a href="">全部文章</a></li>
+                    <li><a href="">美學分享</a></li>
+                    <li><a href="">活動花絮</a></li>
+                    <li><a href="">好評分享</a></li>
+                    <li><a href="">採訪報導</a></li>
                 </ul>
             </div>
             <div class="list_block">
@@ -195,10 +185,7 @@
                 <div class="footer_li">
                     <div class="footer_nav">
                         <li>
-                            <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
-                            </h1>
+                            <img src="img/index/index-footer/logo all.svg" alt="">
                         </li>
                     </div>
                     <div class="footer_main">
@@ -228,7 +215,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
