0511 2041 news_page renew

--- a/蘵感ZanGan上傳/news_page_flower.html
+++ b/蘵感ZanGan上傳/news_page_flower.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- 精簡code +a -->
-    <!-- header -->
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,22 +26,35 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div>
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/login.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
                     </a>
                 </li>
             </ul>
@@ -78,7 +91,7 @@
                         <!-- 文字 -->
                         <div class="news_page_text">
                             <p>親愛的同學，質感美學工作室推出最新的聚會活動——美學下午茶！</p>
-                            <p> 想要在舒適的環境下品嘗美味點心，並且結交志同道合的朋友嗎？快來參加我們的活動吧！活動當天，您可以一邊 <br> 
+                            <p> 想要在舒適的環境下品嘗美味點心，並且結交志同道合的朋友嗎？快來參加我們的活動吧！活動當天，您可以一邊 <br>
                                 品嘗各種美味的小點心，一邊聊聊手作的經驗和技巧，也可以與其他同學交流美學方面的想法和創意。我們的導師<br>
                                 會為您提供一些手作材料，讓您可以在下午茶時間完成一個小作品。</p>
                             <p>這個活動不只是讓您享受美食和手作，更是一個認識新朋友的好機會！我們相信這個聚會會讓您充滿能量和創造力。</p>
@@ -86,8 +99,8 @@
                         </div>
                         <!-- sign up -->
                         <div class="news_page_more">
-                            <div class="news_page_word">
-                                <a href="signup.html">更多詳情</a>
+                            <div class="more">
+                                <a class="news_page_word" href="signup.html">更多詳情</a>
                             </div>
                         </div>
                         <div class="news_page_gray">
@@ -95,26 +108,28 @@
                         </div>
                         <!-- 底層logo -->
                         <div class="news_page_logo">
-                            <img src="img/news/_圖層_1.png" alt="">
+                            <img src="img/news/col logo.svg" alt="">
                         </div>
                     </div>
-
                 </div>
                 <!-- 下面區塊 -->
                 <div class="news_page_box">
-                    <!-- 上一個 -->
-                    <div class="news_page_last">
-                        <img src="img/news/last.png" alt="箭頭icon">
+                    <!-- +++0511 -->
+                    <!-- 查看上一則 -->
+                    <div class="news_page_arrow">
+                        <h3><a href="news_page_oct.html">查看上一則</a></h3>
+                        <img src="img/news/left arrow.svg" alt="">
                     </div>
-                    <!-- 下一個 -->
-                    <div class="news_page_next">
-                        <img src="img/news/next.png" alt="箭頭icon">
+
+                    <!-- 查看下一則 -->
+                    <div class="news_page_arrow">
+                        <h3><a href="news_page_stop.html">查看下一則</a></h3>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- +a -->
     <!-- 8.footer -->
@@ -126,10 +141,7 @@
                 <div class="footer_li">
                     <div class="footer_nav">
                         <li>
-                            <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
-                            </h1>
+                            <img src="img/index/index-footer/logo all.svg" alt="">
                         </li>
                     </div>
                     <div class="footer_main">
@@ -159,7 +171,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
