--- a/蘵感ZanGan上傳/news_page_nov.html
+++ b/蘵感ZanGan上傳/news_page_nov.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- 精簡code +a -->
-    <!-- header -->
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,22 +26,35 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div >
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/login.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
                     </a>
                 </li>
             </ul>
@@ -86,7 +99,7 @@
                         </div>
                         <!-- sign up -->
                         <div class="news_page_more">
-                            <div class="news_page_word">
+                            <div class="more">
                                 <a href="signup.html">更多詳情</a>
                             </div>
                         </div>
@@ -102,13 +115,17 @@
                 </div>
                 <!-- 下面區塊 -->
                 <div class="news_page_box">
-                    <!-- 上一個 -->
-                    <div class="news_page_last">
-                        <img src="img/news/last.png" alt="箭頭icon">
+                    <!-- +++0511 -->
+                    <!-- 查看上一則 -->
+                    <div class="news_page_arrow">
+                        <h3><a href="news.html">查看上一則</a></h3>
+                        <img src="img/news/left arrow.svg" alt="">
                     </div>
-                    <!-- 下一個 -->
-                    <div class="news_page_next">
-                        <img src="img/news/next.png" alt="箭頭icon">
+
+                    <!-- 查看下一則 -->
+                    <div class="news_page_arrow">
+                        <h3><a href="news_page_oct.html">查看下一則</a></h3>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="">
                     </div>
                 </div>
             </div>
@@ -126,10 +143,7 @@
                 <div class="footer_li">
                     <div class="footer_nav">
                         <li>
-                            <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
-                            </h1>
+                           <img src="img/index/index-footer/logo all.svg" alt="">
                         </li>
                     </div>
                     <div class="footer_main">
@@ -159,7 +173,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
