--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -55,8 +55,10 @@
     <!-- 2.banner -->
     <main id="banner">
         <!-- 放背景影片 -->
-        <div>
+        <div class="bgvideo">
             <video src="img/index/index-banner/banner-video.mp4" autoplay muted loop></video>
+            <!-- <img src="img/index/index-banner/banner-video_AdobeExpress (1).gif" alt=""> -->
+            <!-- <figure><img src="img/index/index-banner/banner-video_AdobeExpress.gif" alt=""></figure> -->
         </div>
         <div class="sec">
             <div class="logo">
