--- a/蘵感ZanGan上傳/media_page_nov.html
+++ b/蘵感ZanGan上傳/media_page_nov.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- 精簡code +a -->
-    <!-- header -->
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,22 +26,35 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div >
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/login.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
                     </a>
                 </li>
             </ul>
@@ -137,14 +150,13 @@
                                         <div class="media_page_word">
                                             <a href="signup.html">瞭解課程</a>
                                         </div>
+                                        <span class="under"><hr></span>
+                                       
                                     </div>
                                 </li>
                             </ul>
                         </div>
-                        <hr>
-                        <div class="media_page_gray">
-                            .
-                        </div>
+                    
                         <!-- 底層logo -->
                         <div class="media_page_logo">
                             <img src="img/media/logo（粽色-透明度）.svg" alt="">
@@ -189,7 +201,7 @@
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="more">
                                 <a href="media.html">閱讀更多</a>
-                                <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
                     </div>
@@ -202,7 +214,7 @@
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="more">
                                 <a href="media.html">閱讀更多</a>
-                                <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
                     </div>
@@ -220,7 +232,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -233,7 +245,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -250,7 +262,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -263,7 +275,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -281,11 +293,8 @@
                 <div class="footer_li">
                     <div class="footer_nav">
                         <li>
-                            <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
-                            </h1>
-                        </li>
+                            <img src="img/index/index-footer/logo all.svg" alt="">
+                         </li>
                     </div>
                     <div class="footer_main">
                         <li class="copyright">
@@ -314,7 +323,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
