--- a/蘵感ZanGan上傳/news_page_flower.html
+++ b/蘵感ZanGan上傳/news_page_flower.html
@@ -7,21 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
     <title>【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</title>
-    <link rel="stylesheet" href="news media.css">
+    <link rel="stylesheet" href="pages.css">
     <script src="script.js"></script>
 
 </head>
 
 <body>
-    <!-- 精簡code +a +svg+btn-->
-    <!-- topbar -->
-    <header id="topbar">
+    <!-- 1.2topbar green 精簡+100%-->
+    <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
+                <li><a href="news.html"><h3>最新消息</h3></a></li>
+                <li><a href="course.html"><h3>課程介紹</h3></a></li>
+                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,26 +30,13 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <!-- 0.原本的底色 -->
-                    <!-- <div class="signup"></div> -->
-                    <!-- 改用btn -->
-                    <div>
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
-                    <!-- 0.原本 -->
-                    <!-- <div class="word">
-                        <a href="signup.html">快速報名</a>
-                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
-                    </div> -->
-
+                <li class="signup">
+                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html"><h3>登入</h3></a></span>
                 </li>
                 <li>
                     <a href="cart.html">
@@ -59,7 +45,8 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </div>
+
     <!-- 2.news -->
     <div id="news_page">
         <div class="all_section">
@@ -75,9 +62,6 @@
                     <div class="date">
                         <p> 6.16 <br> 2023 </p>
                     </div>
-                    <!-- <div class="news_page_date">
-                        <img src="img/news/Secondary Headline.png" alt="">
-                    </div> -->
                     <!-- 右邊區塊 -->
                     <div class="news_page_section">
                         <!-- 標題 -->
@@ -100,11 +84,8 @@
                         <!-- sign up -->
                         <div class="news_page_more">
                             <div class="more">
-                                <a class="news_page_word" href="signup.html">更多詳情</a>
+                                <a href="signup.html">更多詳情</a>
                             </div>
-                        </div>
-                        <div class="news_page_gray">
-                            .
                         </div>
                         <!-- 底層logo -->
                         <div class="news_page_logo">
@@ -120,7 +101,6 @@
                         <h3><a href="news_page_oct.html">查看上一則</a></h3>
                         <img src="img/news/left arrow.svg" alt="">
                     </div>
-
                     <!-- 查看下一則 -->
                     <div class="news_page_arrow">
                         <h3><a href="news_page_stop.html">查看下一則</a></h3>
