--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -13,15 +13,14 @@
 </head>
 
 <body>
-    <!-- 精簡code+a+svg+btn-->
-    <!-- 1.topbar white-->
-    <header id="topbarw">
+    <!-- 1.1topbar white 精簡+100%-->
+    <div id="topbarw">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
+                <li><a href="news.html"><h3>最新消息</h3></a></li>
+                <li><a href="course.html"><h3>課程介紹</h3></a></li>
+                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,17 +30,13 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <div>
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
+                <li class="signup">
+                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html"><h3>登入</h3></a></span>
                 </li>
                 <li>
                     <a href="cart.html">
@@ -50,7 +45,7 @@
                 </li>
             </ul>
         </nav>
-    </header>
+    </div>
 
     <!-- 2.banner -->
     <main id="banner">
@@ -78,16 +73,15 @@
         </div>
         </div>
     </main>
-
-    <!-- 精簡code+a+svg+btn-->
-    <!-- 1.2topbar green-->
+    
+    <!-- 1.2topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
+                <li><a href="news.html"><h3>最新消息</h3></a></li>
+                <li><a href="course.html"><h3>課程介紹</h3></a></li>
+                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -97,17 +91,13 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <div>
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
+                <li class="signup">
+                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html"><h3>登入</h3></a></span>
                 </li>
                 <li>
                     <a href="cart.html">
