--- a/蘵感ZanGan上傳/media_page_nov.html
+++ b/蘵感ZanGan上傳/media_page_nov.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
     <title>【2023最新】手作愛好者必看！五大手作種類與課程介紹</title>
-    <link rel="stylesheet" href="news media.css">
+    <link rel="stylesheet" href="pages.css">
     <script src="script.js"></script>
 
 </head>
