--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蘵感最新消息</title>
-    <link rel="stylesheet" href="news media.css">
+    <link rel="stylesheet" href="pages.css">
 </head>
 
 <body>
