--- a/蘵感ZanGan上傳/news_page_stoppaint.html
+++ b/蘵感ZanGan上傳/news_page_stoppaint.html
@@ -7,21 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
     <title>【課程異動】11/20 藝術油畫下午班，停課一次。</title>
-    <link rel="stylesheet" href="news media.css">
+    <link rel="stylesheet" href="pages.css">
     <script src="script.js"></script>
 
 </head>
 
 <body>
-    <!-- 精簡code +a +svg+btn-->
-    <!-- topbar -->
-    <header id="topbar">
+    <!-- 1.2topbar green 精簡+100%-->
+    <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
+                <li><a href="news.html"><h3>最新消息</h3></a></li>
+                <li><a href="course.html"><h3>課程介紹</h3></a></li>
+                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,35 +30,23 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <!-- 0.原本的底色 -->
-                    <!-- <div class="signup"></div> -->
-                    <!-- 改用btn -->
-                    <div >
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
-                    <!-- 0.原本 -->
-                    <!-- <div class="word">
-                        <a href="signup.html">快速報名</a>
-                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
-                    </div> -->
-
+                <li class="signup">
+                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html"><h3>登入</h3></a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
-    </header>
+    </div>
+
     <!-- 2.news -->
     <div id="news_page">
         <div class="all_section">
@@ -97,18 +84,15 @@
                             <p>這個活動不只是讓您享受美食和手作，更是一個認識新朋友的好機會！我們相信這個聚會會讓您充滿能量和創造力。</p>
                             <p>活動的名額有限，請盡快報名！我們期待著您的參與，一起創造美學的體驗。</p>
                         </div>
-                        <!-- sign up -->
+                          <!-- sign up -->
                         <div class="news_page_more">
                             <div class="more">
                                 <a href="signup.html">更多詳情</a>
                             </div>
                         </div>
-                        <div class="news_page_gray">
-                            .
-                        </div>
                         <!-- 底層logo -->
                         <div class="news_page_logo">
-                            <img src="img/news/_圖層_1.png" alt="">
+                            <img src="img/news/col logo.svg" alt="">
                         </div>
                     </div>
 
