--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -10,15 +10,22 @@
 </head>
 
 <body>
-    <!-- 精簡code+a+svg+btn-->
-    <!-- 1.2topbar green-->
+    <!-- 1.2topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li><a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a></li>
+                <li><a href="news.html">
+                        <h3>最新消息</h3>
+                    </a></li>
+                <li><a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a></li>
+                <li><a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -28,17 +35,17 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <div>
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
+                <li class="signup">
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
@@ -67,90 +74,88 @@
         <div class="nc_main">
             <!-- 圖片 -->
             <div class="img2">
-                <img src="img/index/index-news/news_img.png" alt="" width="300" height="600">
+                <img src="img/news/img.png" alt="">
             </div>
             <div class="news_col">
                 <!-- <span> -->
-                    <td>
-                        <!-- section  -->
-                        <!-- 一個日期+最新消息標題 -->
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【活動快訊】 11月美學下午茶報名開始了！</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p></p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
-                                <!-- test -->
-                                <!-- <h3> 2023.1.16</h3>
+                <td>
+                    <!-- section  -->
+                    <!-- 一個日期+最新消息標題 -->
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text"> 【活動快訊】 11月美學下午茶報名開始了！</div>
+                            <div class="news_hr">
+                                <hr>
+                            </div>
+                            <div class="news_img">
+                                <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                            </div>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p></p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
+                            <!-- test -->
+                            <!-- <h3> 2023.1.16</h3>
                         <h2>【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2> -->
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                        <div class="news_news">
-                            <tr>
-                                <p>
-                                <div class="news_date"> 2023.1.16 <br> </div>
-                                <div class="news_text"> 【課程異動】11/20 藝術油畫下午班，停課一次。</div>
-                                <div class="news_hr">
-                                    <hr>
-                                </div>
-                                <div class="news_img">
-                                    <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
-                                            alt=""></a>
-                                </div>
-                                </p>
-                            </tr>
-                        </div>
-                    </td>
+                            <div class="news_hr">
+                                <hr>
+                            </div>
+                            <div class="news_img">
+                                <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                            </div>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text"> 【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</div>
+                            <div class="news_hr">
+                                <hr>
+                            </div>
+                            <div class="news_img">
+                                <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                            </div>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text"> 【課程異動】 11/20花藝、手作香水下午班，停課一次。</div>
+                            <div class="news_hr">
+                                <hr>
+                            </div>
+                            <div class="news_img">
+                                <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                            </div>
+                            </p>
+                        </tr>
+                    </div>
+                    <div class="news_news">
+                        <tr>
+                            <p>
+                            <div class="news_date"> 2023.1.16 <br> </div>
+                            <div class="news_text"> 【課程異動】11/20 藝術油畫下午班，停課一次。</div>
+                            <div class="news_hr">
+                                <hr>
+                            </div>
+                            <div class="news_img">
+                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
+                                        alt=""></a>
+                            </div>
+                            </p>
+                        </tr>
+                    </div>
+                </td>
                 <!-- </span> -->
             </div>
         </div>
