--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -17,10 +17,26 @@
     <div id="topbarw">
         <nav>
             <ul class="menu">
-                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
-                <li><a href="news.html"><h3>最新消息</h3></a></li>
-                <li><a href="course.html"><h3>課程介紹</h3></a></li>
-                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
+                <li>
+                    <a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="news.html">
+                        <h3>最新消息</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a>
+                </li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,12 +47,16 @@
         <nav>
             <ul class="icon">
                 <li class="signup">
-                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
                     <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html"><h3>登入</h3></a></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
@@ -73,15 +93,23 @@
         </div>
         </div>
     </main>
-    
+
     <!-- 1.2topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
-                <li><a href="news.html"><h3>最新消息</h3></a></li>
-                <li><a href="course.html"><h3>課程介紹</h3></a></li>
-                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
+                <li><a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a></li>
+                <li><a href="news.html">
+                        <h3>最新消息</h3>
+                    </a></li>
+                <li><a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a></li>
+                <li><a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -92,12 +120,16 @@
         <nav>
             <ul class="icon">
                 <li class="signup">
-                    <a href="signup.html"><h3>快速報名</h3></a>
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
                     <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html"><h3>登入</h3></a></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
@@ -190,7 +222,7 @@
                     <span class="course_p">
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>  
+                        </p>
                     </span>
                 </div>
             </li>
@@ -213,7 +245,7 @@
                     <span class="course_p">
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p> 
+                        </p>
                     </span>
                 </div>
             </li>
