--- a/蘵感ZanGan上傳/media_page_nov.html
+++ b/蘵感ZanGan上傳/media_page_nov.html
@@ -18,10 +18,28 @@
     <header id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <ul class="menu">
+                    <li>
+                        <a href="about.html">
+                            <h3>關於蘵感</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="news.html">
+                            <h3>最新消息</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="course.html">
+                            <h3>課程介紹</h3>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="media.html">
+                            <h3>蘵感文章</h3>
+                        </a>
+                    </li>
+                </ul>
             </ul>
         </nav>
         <h1 class="logo">
