--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -10,16 +10,30 @@
 </head>
 
 <body>
-
-    <!-- 精簡code +a +svg+btn-->
-    <!-- topbar -->
-    <header id="topbar">
+    <!-- 1.2topbar green 精簡+100%-->
+    <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">關於蘵感</a></li>
-                <li><a href="news.html">最新消息</a></li>
-                <li><a href="course.html">課程介紹</a></li>
-                <li><a href="media.html">蘵感文章</a></li>
+                <li>
+                    <a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="news.html">
+                        <h3>最新消息</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a>
+                </li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -29,36 +43,26 @@
         </h1>
         <nav>
             <ul class="icon">
-                <li class="box">
-                    <!-- 0.原本的底色 -->
-                    <!-- <div class="signup"></div> -->
-                    <!-- 改用btn -->
-                    <div >
-                        <div class="m_btn">
-                            <a href="signup.html">快速報名</a>
-                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                        </div>
-                    </div>
-                    <!-- 0.原本 -->
-                    <!-- <div class="word">
-                        <a href="signup.html">快速報名</a>
-                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
-                    </div> -->
-
+                <li class="signup">
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
+                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">登入</a></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
-    </header>
-
+    </div>
 
     <!-- 2.media  -->
     <main id="media">
