--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -14,18 +14,26 @@
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html">
+                <li>
+                    <a href="about.html">
                         <h3>關於蘵感</h3>
-                    </a></li>
-                <li><a href="news.html">
+                    </a>
+                </li>
+                <li>
+                    <a href="news.html">
                         <h3>最新消息</h3>
-                    </a></li>
-                <li><a href="course.html">
+                    </a>
+                </li>
+                <li>
+                    <a href="course.html">
                         <h3>課程介紹</h3>
-                    </a></li>
-                <li><a href="media.html">
+                    </a>
+                </li>
+                <li>
+                    <a href="media.html">
                         <h3>蘵感文章</h3>
-                    </a></li>
+                    </a>
+                </li>
             </ul>
         </nav>
         <h1 class="logo">
