--- a/蘵感ZanGan上傳/www.html
+++ b/蘵感ZanGan上傳/www.html
@@ -177,7 +177,7 @@
     <div id="course">
         <ul>
             <!-- 藝術插花 -->
-            <li>
+            <li class="item1">
                 <nav >
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
@@ -202,7 +202,7 @@
                 </div>
             </li>
             <!-- 自由繪畫 paint-->
-            <li>
+            <li class="item2">
                 <nav >
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
@@ -227,7 +227,7 @@
                 </div>
             </li>
             <!--蘵感手作 handmade -->
-            <li>
+            <li class="item3">
                 <nav >
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
@@ -252,7 +252,7 @@
                 </div>
             </li>
             <!-- 香水特製Lab purfume -->
-            <li>
+            <li class="item4">
                 <nav >
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
@@ -277,7 +277,7 @@
                 </div>
             </li>
             <!-- 小點茶藝工坊 dessert-->
-            <li>
+            <li class="item5">
                 <nav >
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
@@ -303,6 +303,7 @@
             </li>
         </ul>
     </div>
+    
     <!-- 5.teachers -->
     <div id="teachers">
         <div class="a">
