--- a/蘵感ZanGan上傳/www.html
+++ b/蘵感ZanGan上傳/www.html
@@ -178,12 +178,12 @@
         <ul>
             <!-- 藝術插花 -->
             <li class="item1">
-                <nav >
+                <nav>
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
                             alt="logo">
                     </div>
-                    <span >
+                    <span>
                         <h3>藝術插花</h3>
                     </span>
                     <div>
@@ -203,12 +203,12 @@
             </li>
             <!-- 自由繪畫 paint-->
             <li class="item2">
-                <nav >
+                <nav>
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
                             alt="logo">
                     </div>
-                    <span >
+                    <span>
                         <h3>自由繪畫</h3>
                     </span>
                     <div>
@@ -228,12 +228,12 @@
             </li>
             <!--蘵感手作 handmade -->
             <li class="item3">
-                <nav >
+                <nav>
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
                             alt="logo">
                     </div>
-                    <span >
+                    <span>
                         <h3>蘵感手作</h3>
                     </span>
                     <div>
@@ -253,12 +253,12 @@
             </li>
             <!-- 香水特製Lab purfume -->
             <li class="item4">
-                <nav >
+                <nav>
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
                             alt="logo">
                     </div>
-                    <span >
+                    <span>
                         <h3>香水特製Lab</h3>
                     </span>
                     <div>
@@ -278,12 +278,12 @@
             </li>
             <!-- 小點茶藝工坊 dessert-->
             <li class="item5">
-                <nav >
+                <nav>
                     <div>
                         <img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14" height="20"
                             alt="logo">
                     </div>
-                    <span >
+                    <span>
                         <h3>小點茶藝工坊</h3>
                     </span>
                     <div>
@@ -303,7 +303,7 @@
             </li>
         </ul>
     </div>
-    
+
     <!-- 5.teachers -->
     <div id="teachers">
         <div class="a">
@@ -311,7 +311,6 @@
                 <h3>TEACHERS</h3>
                 <h1>蘵感 <pr>專業師資 </h1>
                 <div class="hr"></div>
-
             </div>
             <div class="b">
                 <img src="img/index/index-teachers/logo(棕色).svg" alt="">
@@ -407,10 +406,6 @@
                     <h3>NEWS</h3>
                     <h1>最新消息</h1>
                     <hr>
-                    <!-- test -->
-                    <!-- <div class="news_hrline">
-                        <hr>
-                    </div> -->
                 </div>
                 <div class="news_more">
                     <a href="news.html">查看更多</a>
@@ -419,8 +414,7 @@
             </nav>
             <span>
                 <td>
-                    <!-- section  -->
-                    <!-- 一個日期+最新消息標題 -->
+                    <!-- section  一個日期+最新消息標題 -->
                     <div class="news_news">
                         <tr>
                             <p>
@@ -440,9 +434,6 @@
                             <p></p>
                             <div class="news_date"> 2023.1.16 <br> </div>
                             <div class="news_text"> 【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</div>
-                            <!-- test -->
-                            <!-- <h3> 2023.1.16</h3>
-                            <h2>【課程快訊】 10月特別推出「DIY皮革工藝」快閃課程，不可錯過！</h2> -->
                             <div class="news_hr">
                                 <hr>
                             </div>
@@ -489,8 +480,8 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
-                                        alt=""></a>
+                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg" alt="">
+                                </a>
                             </div>
                             </p>
                         </tr>
